--- a/app/src/main/res/layout/activity_social_login_verification.xml
+++ b/app/src/main/res/layout/activity_social_login_verification.xml
@@ -84,6 +84,7 @@
                         app:backgroundTint="@color/colorAccent"
                         android:text="@string/verify"
                         android:textColor="@color/whiteAlpha70"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
                         />
 
 
