--- a/app/src/main/res/layout/verification_code_layout.xml
+++ b/app/src/main/res/layout/verification_code_layout.xml
@@ -47,6 +47,7 @@
             android:text="@string/resend"
             android:textColor="@color/whiteAlpha70"
             android:textAlignment="center"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -62,6 +63,7 @@
             android:gravity="center"
             android:textAlignment="center"
             android:visibility="gone"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             />
     </FrameLayout>
 
