--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -18,7 +18,8 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="60dp"
-                app:cardElevation="10dp">
+                app:cardElevation="10dp"
+                android:layout_gravity="center">
 
                 <ImageView
                     android:id="@+id/photoView"
