--- a/app/src/main/res/layout/home_coin_info.xml
+++ b/app/src/main/res/layout/home_coin_info.xml
@@ -7,7 +7,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     app:cardBackgroundColor="@color/colorPrimaryDark"
-    app:contentPadding="8dp">
+    app:contentPadding="8dp"
+    app:cardCornerRadius="0dp"
+    app:cardUseCompatPadding="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,12 +20,11 @@
             android:id="@+id/user_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="60,000,000,000 BTC"
+            android:text="60,000,000 BTC"
             android:textColor="@color/whiteAlpha30"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="28sp"
-            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="24sp"
             app:textAllCaps="true"
             app:layout_constraintTop_toTopOf="parent"
             android:elegantTextHeight="true"
@@ -35,7 +36,7 @@
             android:id="@+id/user_balance_usd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100,000,000,000 USD"
+            android:text="100,000,000 USD"
             android:textColor="@color/whiteAlpha30"
             app:layout_constraintEnd_toEndOf="@id/user_balance"
             android:textSize="16sp"
@@ -45,8 +46,6 @@
             android:elegantTextHeight="true"
             android:layout_marginTop="2dp"
             />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
