--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:fitsSystemWindows="true"
+    android:background="@color/blueGreyL4">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/contentView"
@@ -34,13 +36,11 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorGooglePlus"
-                    android:fillViewport="true">
+                    android:layout_height="wrap_content">
 
 
                     <include
-                        layout="@layout/home_current_coin_info"
+                        layout="@layout/home_coin_info"
                         android:layout_width="match_parent"
                         android:layout_height="400dp"
                         app:layout_constraintTop_toBottomOf="parent"
