--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
+    android:layout_height="160dp"
     android:paddingTop="40dp"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    android:fitsSystemWindows="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -13,22 +14,16 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/photoViewParent"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                app:cardCornerRadius="60dp"
-                app:cardElevation="10dp"
-                android:layout_gravity="center">
-
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_gravity="center"
                     android:id="@+id/photoView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:scaleType="fitXY"
+                    android:background="@drawable/circular"
+                    android:adjustViewBounds="true"
+                    app:elevation="8dp"
                     />
-
-            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/nameView"
