--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -6,59 +6,60 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/colorPrimaryDark"
-    app:elevation="0dp">
+    android:background="@color/sideNavBg"
+    app:elevation="10dp"
+    android:fitsSystemWindows="true"
+    android:paddingBottom="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <include
-            android:id="@+id/nav_header_include"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            layout="@layout/nav_header"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <View
-            android:id="@+id/divider_1"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/whiteAlpha50P"
-            app:layout_constraintTop_toBottomOf="@id/nav_header_include"
-            />
-
-        <ListView
-            android:id="@+id/drawerListView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:divider="@color/whiteAlpha50P"
-            android:dividerHeight="0.1dp"
-            app:layout_constraintTop_toBottomOf="@id/divider_1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
+            android:paddingBottom="10dp">
+
+            <include
+                android:id="@+id/nav_header_include"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                layout="@layout/nav_header"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
 
-        <View
-            android:id="@+id/divider_2"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/whiteAlpha50P"
-            app:layout_constraintTop_toBottomOf="@id/drawerListView"
-            />
 
-        <TextView
-            android:id="@+id/copyrightTNS"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:text="@string/copyright_transcodium"
-            android:textColor="@color/whiteAlpha30"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            <ListView
+                android:id="@+id/drawerListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@color/whiteAlpha50P"
+                android:dividerHeight="0.1dp"
+                app:layout_constraintTop_toBottomOf="@id/nav_header_include"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            <TextView
+                android:id="@+id/copyrightTNS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp"
+                android:text="@string/copyright_transcodium"
+                android:textColor="@color/whiteAlpha30"
+                android:layout_marginTop="40dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/drawerListView"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+
 </com.google.android.material.navigation.NavigationView>
