--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,9 @@
         <color name="colorLinkedin">#4376B1</color>
         <color name="white">#ffffff</color>
         <color name="whiteAlpha50P">#80ffffff</color>
+        <color name="colorTNS">#0288D1</color>
+        <color name="colorBTC">#ef6c00</color>
+        <color name="colorETH">#323433</color>
+        <color name="sideNavBg">#027dc0</color>
 </resources>
 
