--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,12 @@
 
         <item tools:targetApi="21"
             name="android:windowContentTransitions">true</item>
+
         <item  tools:targetApi="26"
             name="android:autofilledHighlight">@android:color/transparent</item>
+
+        <item tools:targetApi="21"
+            name="android:statusBarColor">@android:color/transparent</item>
 
     </style>
 
