--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,37 +20,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <include
-                android:id="@+id/topAppBar"
-                layout="@layout/app_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-             />
 
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/topAppBar"
-                app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    <include
+                        android:id="@+id/topAppBar"
+                        layout="@layout/app_bar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        />
 
 
                     <include
                         layout="@layout/home_coin_info"
+                        android:id="@+id/coinInfoInclude"
                         android:layout_width="match_parent"
-                        android:layout_height="400dp"
-                        app:layout_constraintTop_toBottomOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_height="280dp"
+                        app:layout_constraintTop_toBottomOf="@id/topAppBar"
                         />
 
+                    <androidx.core.widget.NestedScrollView
+                        android:id="@+id/coinsCardParentScrollview"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintTop_toBottomOf="@id/coinInfoInclude"
+                        app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain">
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/coinsListRecycler"
+                            >
 
-            </androidx.core.widget.NestedScrollView>
+                        </androidx.recyclerview.widget.RecyclerView>
+
+                    </androidx.core.widget.NestedScrollView>
+
 
             <include
                 android:id="@+id/bottomNavBarMain"
