--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,10 +34,11 @@
         <color name="colorLinkedin">#4376B1</color>
         <color name="white">#ffffff</color>
         <color name="whiteAlpha50P">#80ffffff</color>
-        <color name="colorTNS">#B30288D1</color>
-        <color name="colorBTC">#B3ef6c00</color>
-        <color name="colorETH">#B3323433</color>
-        <color name="colorMonero">#FF6600</color>
+        <color name="colorTNS">#0288D1</color>
+        <color name="colorBTC">#ffa726</color>
+        <color name="colorETH">#323433</color>
+        <color name="colorXMR">#e65100</color>
+        <color name="colorLTC">#616161</color>
         <color name="sideNavBg">#027dc0</color>
 </resources>
 
