update on home UI

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,41 +20,51 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <include
+                android:id="@+id/topAppBar"
+                layout="@layout/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
-                    <include
-                        android:id="@+id/topAppBar"
-                        layout="@layout/app_bar"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/topAppBar"
+                app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain"
+                android:weightSum="2">
+
+
+                <include
+                    layout="@layout/home_coin_info"
+                    android:id="@+id/coinInfoInclude"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+
+                    />
+
+                <androidx.core.widget.NestedScrollView
+                    android:id="@+id/coinsCardParentScrollview"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:minHeight="300dp"
+                    app:layout_constraintTop_toBottomOf="@id/coinInfoInclude">
+
+                    <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        />
+                        android:id="@+id/coinsListRecycler"
+                        >
 
+                    </androidx.recyclerview.widget.RecyclerView>
 
-                    <include
-                        layout="@layout/home_coin_info"
-                        android:id="@+id/coinInfoInclude"
-                        android:layout_width="match_parent"
-                        android:layout_height="280dp"
-                        app:layout_constraintTop_toBottomOf="@id/topAppBar"
-                        />
+                </androidx.core.widget.NestedScrollView>
 
-                    <androidx.core.widget.NestedScrollView
-                        android:id="@+id/coinsCardParentScrollview"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        app:layout_constraintTop_toBottomOf="@id/coinInfoInclude"
-                        app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/coinsListRecycler"
-                            >
-
-                        </androidx.recyclerview.widget.RecyclerView>
-
-                    </androidx.core.widget.NestedScrollView>
-
+             </LinearLayout>
 
             <include
                 android:id="@+id/bottomNavBarMain"
