--- a/app/src/main/res/layout/home_coins_list_layout.xml
+++ b/app/src/main/res/layout/home_coins_list_layout.xml
@@ -5,7 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="0dp"
     app:cardElevation="5dp"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="5dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +25,7 @@
             android:layout_gravity="center"
             android:padding="10dp">
 
-            <TextView
+            <TextSwitcher
                 android:id="@+id/coinName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,6 +35,7 @@
                 android:textStyle="bold"
                 android:textAllCaps="true"
             />
+
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
