--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
         <color name="colorETH">#323433</color>
         <color name="colorXMR">#e65100</color>
         <color name="colorLTC">#616161</color>
+        <color name="colorEOS">#000000</color>
         <color name="sideNavBg">#027dc0</color>
 </resources>
 
