--- a/app/src/main/res/layout/home_coins_list_layout.xml
+++ b/app/src/main/res/layout/home_coins_list_layout.xml
@@ -25,8 +25,8 @@
             android:layout_gravity="center"
             android:padding="10dp">
 
-            <TextSwitcher
-                android:id="@+id/coinName"
+            <TextView
+                android:id="@+id/coinNameTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
