--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,7 +39,7 @@
 
                 <include
                     layout="@layout/home_coin_info"
-                    android:id="@+id/coinInfoInclude"
+                    android:id="@+id/coinInfoCard"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -52,7 +52,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:minHeight="300dp"
-                    app:layout_constraintTop_toBottomOf="@id/coinInfoInclude">
+                    app:layout_constraintTop_toBottomOf="@id/coinInfoCard">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
