--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:menu="@menu/bottom_nav_menu"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/coinInfoMenuTab"
     xmlns:android="http://schemas.android.com/apk/res/android"
     app:itemTextColor="@drawable/bottom_nav_item"
     app:itemIconTint="@drawable/bottom_nav_item"
