--- a/app/src/main/res/layout/home_coin_info.xml
+++ b/app/src/main/res/layout/home_coin_info.xml
@@ -15,6 +15,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/userBalanceView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +27,6 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/whiteAlpha30"
                 app:layout_constraintStart_toStartOf="parent"
-                android:text="1"
                 android:textSize="70sp"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -39,7 +39,6 @@
                 app:layout_constraintStart_toEndOf="@id/balanceFirstDigit"
                 android:textSize="22sp"
                 android:textAlignment="center"
-                app:textAllCaps="true"
                 app:layout_constraintTop_toTopOf="@id/balanceFirstDigit"
                 android:layout_marginTop="20dp"
                 />
