--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,8 +8,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
+    android:background="@color/blueGreyL4"
     android:fitsSystemWindows="true"
-    android:background="@color/blueGreyL4">
+    app:layout_collapseMode="parallax">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/contentView"
