--- a/app/src/main/res/layout/home_coin_info.xml
+++ b/app/src/main/res/layout/home_coin_info.xml
@@ -56,13 +56,27 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/coinInfoChart"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userBalanceView"
+            app:layout_constraintBottom_toTopOf="@id/coinMenuTabLayout"
+            android:translationX="8dp"
+            android:translationY="15dp"
+            />
+
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/coinMenuTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/coinInfoMenuTab"
             app:layout_constraintBottom_toBottomOf="parent"
             app:tabTextColor="@color/whiteAlpha70"
             android:padding="0dp"
+            android:layout_margin="0dp"
             app:tabInlineLabel="true"
             app:tabIndicatorHeight="0dp"
             app:tabRippleColor="@color/white">
