--- a/app/src/main/res/layout/chart_marker_view.xml
+++ b/app/src/main/res/layout/chart_marker_view.xml
@@ -27,7 +27,7 @@
                 android:layout_height="14dp"
                 android:src="@drawable/ic_access_time_black_24dp"
                 app:tint="@color/blueGreyD2"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="1dp"
                 />
 
             <TextView
@@ -42,9 +42,19 @@
             android:id="@+id/priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/date_colon"
             android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@id/timeWrapper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/marketTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@id/priceTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
