--- a/app/src/main/res/layout/home_coins_list_layout.xml
+++ b/app/src/main/res/layout/home_coins_list_layout.xml
@@ -6,9 +6,7 @@
     android:layout_margin="0dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="5dp"
-    android:foreground="?attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:foreground="?attr/selectableItemBackground">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
