--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,16 +14,25 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_gravity="center"
-                    android:id="@+id/photoView"
+                <FrameLayout
                     android:layout_width="120dp"
                     android:layout_height="120dp"
+                    android:padding="4dp"
+                    android:background="@drawable/circular">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/photoView"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:scaleType="fitXY"
-                    android:background="@drawable/circular"
                     android:adjustViewBounds="true"
                     app:elevation="8dp"
+                    android:src="@drawable/ic_user_default"
+                    app:tint="@color/whiteAlpha50P"
+                    android:padding="4dp"
                     />
+                </FrameLayout>
 
             <TextView
                 android:id="@+id/nameView"
