--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,22 +15,22 @@
             android:orientation="vertical">
 
                 <FrameLayout
+                    android:id="@+id/photoViewParent"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:padding="4dp"
-                    android:background="@drawable/circular">
+                    android:padding="3dp"
+                    android:background="@drawable/circular"
+                    android:layout_gravity="center">
 
             <androidx.appcompat.widget.AppCompatImageView
                     android:layout_gravity="center"
                     android:id="@+id/photoView"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
                     app:elevation="8dp"
                     android:src="@drawable/ic_user_default"
-                    app:tint="@color/whiteAlpha50P"
-                    android:padding="4dp"
                     />
                 </FrameLayout>
 
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textColor="@color/blueGreyL4"
                 android:layout_marginTop="10dp"
                 />
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/emailOrPhoneView"
-                android:textSize="18sp"
+                android:textSize="12sp"
                 android:textColor="@color/blueGreyL4"/>
 
             <TextView
