--- a/app/src/main/res/layout/drawer_list_item_row.xml
+++ b/app/src/main/res/layout/drawer_list_item_row.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:clickable="true"
-    android:focusable="true"
+    android:focusable="false"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/menuIcon"
