--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -8,8 +8,7 @@
     android:layout_gravity="start"
     android:background="@color/sideNavBg"
     app:elevation="10dp"
-    android:fitsSystemWindows="true"
-    android:paddingBottom="10dp">
+    android:fitsSystemWindows="true">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -26,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 layout="@layout/nav_header"
+                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 />
 
@@ -43,23 +43,24 @@
                 />
 
 
-
-
-            <TextView
-                android:id="@+id/copyrightTNS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="60dp"
-                android:text="@string/copyright_transcodium"
-                android:textColor="@color/whiteAlpha30"
-                android:layout_marginTop="40dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/drawerListView"/>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
 
+    <FrameLayout
+        android:id="@+id/copyrightTNS"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/whiteAlpha50P"
+        android:layout_gravity="bottom">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/copyright_transcodium"
+            android:textColor="@color/coinInfoMenuTab"
+            android:layout_gravity="center"
+            />
+    </FrameLayout>
 
 </com.google.android.material.navigation.NavigationView>
