--- a/app/src/main/res/layout/home_coins_list_layout.xml
+++ b/app/src/main/res/layout/home_coins_list_layout.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="0dp"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="5dp"
-    android:foreground="?attr/selectableItemBackground">
+    android:layout_margin="0dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,4 +34,4 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
