--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,9 @@
         <item tools:targetApi="21"
             name="android:statusBarColor">@android:color/transparent</item>
 
+        <item name="android:windowEnterAnimation">@android:anim/slide_in_left</item>
+        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+
     </style>
 
     <style name="AppIntroTheme" parent="Theme.AppCompat.NoActionBar" />
@@ -37,10 +40,16 @@
 
     </style>
 
-    <style name="AppDialog" parent="Theme.AppCompat.DayNight.Dialog">
+    <style name="DialogAnim" parent="android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_up</item>
+        <item name="android:activityOpenExitAnimation">@null</item>
+        <item name="android:activityCloseEnterAnimation">@null</item>
+        <item name="android:activityCloseExitAnimation">@android:anim/slide_out_right</item>
+    </style>
+
+    <style name="AppDialog" parent="Theme.AppCompat.Dialog">
         <item name="windowNoTitle">true</item>
-        <item name="android:windowEnterAnimation">@anim/slide_in_up</item>
-        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
-        <item name="android:fadeEnabled">false</item>
+        <item name="android:windowAnimationStyle">@style/DialogAnim</item>
+        <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 </resources>
