--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,29 @@
 
     </style>
 
+    <style name="TextInputLayoutStyle"
+        parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxCornerRadiusBottomEnd">40dp</item>
+        <item name="boxCornerRadiusBottomStart">40dp</item>
+        <item name="boxCornerRadiusTopEnd">40dp</item>
+        <item name="boxCornerRadiusTopStart">40dp</item>
+        <item name="boxStrokeColor">@color/colorPrimary</item>
+        <item name="android:textColorHint">@color/blueGreyL3</item>
+    </style>
+
+    <style name="TextInputStyle" parent="Base.Widget.MaterialComponents.TextInputEditText">
+        <item name="colorControlNormal">@color/green</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
+
+    <style name="RoundedButton" parent="Widget.MaterialComponents.Button">
+        <item name="boxCornerRadiusBottomEnd">40dp</item>
+        <item name="boxCornerRadiusBottomStart">40dp</item>
+        <item name="boxCornerRadiusTopEnd">40dp</item>
+        <item name="boxCornerRadiusTopStart">40dp</item>
+    </style>
+
     <style name="AppIntroTheme" parent="Theme.AppCompat.NoActionBar" />
 
     <style name="AppTheme.TransparentStatusBar" parent="AppTheme">
@@ -56,5 +79,6 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowAnimationStyle">@style/DialogAnim</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 </resources>
