Kick out an strange intrusion
Kick out for 15minutes after 5 fingerprint attempts and 5 pin code attempt ...

--- a/app/src/main/res/layout/activity_pin_code_auth.xml
+++ b/app/src/main/res/layout/activity_pin_code_auth.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SocialLoginActivity"
+    tools:context=".LoginActivity"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -141,7 +141,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/pinCodeTitle"
                     style="@style/TextInputLayoutStyle"
-                    android:maxWidth="250dp"
                     android:hint="@string/enter_pincode"
                     app:errorEnabled="true">
 
